# worms-cortex

./: .gitignore  README.md
.github/workflows/: black.yaml
worms_cortex/: CMakeLists.txt  package.xml  setup.cfg  setup.py
worms_cortex/srv/: LaunchNode.srv
worms_cortex/worms_cortex/: manager_node.py  subsystem.py
worms_cortex/worms_cortex/actions/: __init__.py  execute_piped_process.py  execute_process_piped.py  manager_node.py  piped_node.py
worms_cortex/worms_cortex/event_handlers/: __init__.py  on_launch_node.py  on_piped_output.py  on_process_payload.py  on_raw_payload.py
worms_cortex/worms_cortex/events/: __init__.py  ack_node.py  launch_node.py  piped_input.py  piped_output.py  process_payload.py  raw_payload.py  serialize.py
worms_cortex/worms_cortex/srv/: __init__.py  launch_node.py
worms_cortex_interface/: CMakeLists.txt  package.xml
worms_cortex_interface/srv/: LaunchNode.srv
